web/bundles/lovethatfit/admin/css/bootstrap.css
/* ... */
.edt_container .span3:before :last-child{
	padding-left:20px;		
}

.det_container .span3:nth-child(3n){
	font-weight:bold;
	width:15%!important;	
}

.edt_container .span3:nth-child(3n){
	font-weight:bold;
	width:15%!important;	
}

.btn_wrapper{
	float:right;
	margin-top:62px;	
}

.edt_container .row-fluid{
border:0px;	
}

.edt_container .btn-large{
   border-radius: 6px 6px 6px 6px;
    font-size: 22px;
    padding: 8px 11px;
}

.edt_container .btn-primary {
   
   background: #627d4d;
background: -moz-linear-gradient(top, #627d4d 0%, #1f3b08 100%);
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#627d4d), color-stop(100%,#1f3b08));
background: -webkit-linear-gradient(top, #627d4d 0%,#1f3b08 100%);
background: -o-linear-gradient(top, #627d4d 0%,#1f3b08 100%);
background: -ms-linear-gradient(top, #627d4d 0%,#1f3b08 100%);
background: linear-gradient(to bottom, #627d4d 0%,#1f3b08 100%);
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#627d4d', endColorstr='#1f3b08',GradientType=0 );
    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
    color: #FFFFFF;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
	padding:8px 30px 8px 30px;
}

.edt_container .btn-primary:hover {
   
   background: #1f3b08;

}

.span1:last-child div{     
    margin-top:-25px;
  }
  
  .brands .span1:last-child div{     
    margin-top:0px;
  }

#detail_wrapper select, input[type="file"] {
    height: 30px;
    line-height: 42px;
    width:220px;
}

.show{
    padding-top: 30px;
    max-height: 93px;
    min-height: 93px!important;
    
    
}

.span8 .span5{    
border-bottom:1px solid #ccc !important;
}

.show-grid img{
width:70px;
height:60px;

}

#product_info{
	padding:20px;
	overflow:hidden;
        background:#efefef;
}

#detail_wrapper h2{
    padding:0px 0px 0px 10px!important;
    font-size: 1.3em!important;
    background: linear-gradient(to bottom, #64656B 0%, #64656B 50%, #4F5056 51%, #4F5056 100%) repeat scroll 0 0 transparent;
    color: #fff;   
    margin:20px 0px 20px 0px;
	
}

#pro_color{
         padding:10px 10px 0px 10px;
	overflow:hidden;
        position: relative;      
       
    
}

#pro_clr{        
	overflow:hidden;
        position: relative;        
}

#pro_clr table{        
	padding:0px 20px;
        display: block;
}

#product_info_left{
    float:left;
    overflow: auto;
}

#product_info_right{
    float:left;
margin-left: 80px;
}

#product_info .product_fld{    
clear:left;
padding:5px 0px 5px 0px;
}

#product_info .product_fld .p_hd{
    
    font-weight: bold;
    width: 80px!important;
    padding-right: 50px;
    
}

.hds a{
    
    color:#fff!important;
    
}

#product_info .product_fld div{ 
    
    float:left;
    text-align: right;

}

.edt_container label {
   display: inline-block;
    margin-bottom: 5px;
    padding-left: 5px;
    padding-right: 16px;
    padding-top: 10px;
}

#photo_upload{    
    background:#efefef; 
    width: 220px; 
    height: 250px; 
    margin-top: 10px;
}

#product_info .p_title .span1{
    
    width:11%!important;
}

#product_info .show-grid:hover [class*="span2"] {
    background: none;
}

#form_questionstatus{    
    float:left;
}

.size_box input[type="text"]{
   width:25px!important; 
    
}

 #detail_wrapper #pro_sizes_wrapper input[type="text"] {
    width: 95px;
}
 #detail_wrapper #pro_clr input[type="text"] {
    width: 95px;
}

.minlable{
    display: inline;
    position:absolute;
    margin-top: -22px
    
}

